# PP2_SIstema_Gestion_Agricola

./: README.md  main.hs
Code/: frucali.cabal  main.hs
Code/data/: cosechas.csv  cosechasCerradas.csv  herramienta.csv  herramientas.csv  parcelas.csv  trabajadores.csv
Code/src/: InformeCosechas.hs  Menu.hs  OpcionesGenerales.hs  OpcionesOperativas.hs  Trabajadores.hs
data/: herramientas.csv  herramientas.txt
src/: menu.hs  opcionesOperativas.hs  trabajadores.hs
